<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">兄弟连</string>
    <string name="default_title">标题</string>
    <string name="home_page">首页</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="login_account">昵称:</string>
    <string name="login_account_hint">请输入昵称</string>
    <string name="login_pwd">密码:</string>
    <string name="new_pwd">密码:</string>
    <string name="confirm_new_pwd">密码:</string>
    <string name="loing_account_pwd_hint">请输入密码</string>
    <string name="loing_account_pwd_confirm_hint">请确认密码</string>
    <string name="register_account">昵称:</string>
    <string name="add">添加</string>
    <string name="post">帖子</string>
    <string name="comment">评论</string>
    <string name="collect">收藏</string>
    <string name="make_post">发帖</string>
    <string name="create">创建</string>
    <string name="search">查找</string>
    <string name="save">保存</string>
    <string name="me">me</string>
    <string name="friend">好友中心</string>
    <string name="person_setting">个人中心</string>
    <string name="pic_story">图片故事</string>
    <string name="my_xiongdilian">兄弟连</string>
    <string name="members_list">成员列表</string>
    <string name="xiongdilian_head_img">兄弟连头像</string>
    <string name="create_xiongdilian_title_et_hint">请输入名称(最多8字)</string>
    <string name="create_xiongdilian_desc_et_hint">请输入你的兄弟连的描述</string>
    <string name="create_xionglian_btn_text">创建兄弟连</string>
    <string name="select_from_phone">从手机相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="cancel">取消</string>
    <string name="back">back</string>
    <string name="start_app_bg">start_app_bg</string>
    <string name="xiongdilian_headimg">兄弟连对象头像</string>
    <string name="my_xiongdilian_people1">my_xiongdilian_people1</string>
    <string name="my_xiongdilian_post1">my_xiongdilian_post1</string>
    <string name="hot">hot</string>
    <string name="edit_img">编辑按钮</string>
    <string name="make_post_title_hint">请输入帖子标题(最多10个字)</string>
    <string name="post_title_is_null">请输入帖子标题</string>
    <string name="start_select_photo_iv">start_select_photo_iv</string>
    <string name="make_post_content_hint">请输入帖子内容</string>
    <string name="post_content_is_null">请输入帖子内容</string>
    <string name="post_img">post_img</string>
    <string name="post_man_head_iv">post_man_head_iv</string>
    <string name="post_comment_btn_bg">post_comment_btn_bg</string>
    <string name="post_pic_story_iv">post_pic_story_iv</string>
    <string name="details_image">details_image</string>
    <string name="member_head_iv">member_head_iv</string>
    <string name="up_page">上一页</string>
    <string name="down_page">下一页</string>
    <string name="join_xiongdilian">+加入</string>
    <string name="self_data">个人资料</string>
    <string name="detail_data">详细资料</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="hot_xiongdilians">热门推荐</string>
    <string name="search_xiongdilian_by_name">名称查找</string>
    <string name="sdcard_is_useless">SDCard不可用</string>
    <string name="get_pic_error">获取照片失败</string>
    <string name="crop_pic_error">裁剪照片失败</string>
    <string name="create_xiongdilian_name_is_null">请输入名称</string>
    <string name="create_xiongdilian_desc_is_null">请输入描述</string>
    <string name="create_xiongdilian_fail">创建失败</string>
    <string name="upload_pic_error">头像上传出错</string>
    <string name="person_post_num_increate_error">个人发帖数自增失败</string>
    <string name="xiongdilian_post_num_increate_error">帖子数自增失败</string>
    <string name="push_post_error">发帖失败</string>
    <string name="multi_pics_upload_error">批量上传失败</string>
    <string name="select_data_error">哎呀,查询失败</string>
    <string name="get_data_error">数据获取出错</string>
    <string name="please_select">请选择</string>
    <string name="no_more_post">没有更多帖子了</string>
    <string name="no_post">没有帖子</string>
    <string name="comment_is_null">发表评论不能为空</string>
    <string name="post_add_collect_fail">哎呀，加入收藏失败</string>
    <string name="post_cancel_collect_fail">哎呀，取消收藏失败</string>
    <string name="post_comment_fail">哎呀,评论失败了</string>
    <string name="post_no_more_comment">没有更多评论了</string>
    <string name="post_no_comment">没有任何评论，抢沙发吧</string>
    <string name="update_headimg_fail">头像更新失败</string>
    <string name="update_headimg_success">头像更新成功</string>
    <string name="upload_headimg_fail">头像上传失败</string>
    <string name="add_black_list_fail">黑名单添加失败</string>
    <string name="add_black_list_success">黑名单添加成功</string>
    <string name="add_black_list_notice">加入黑名单，你将不再收到对方的消息，确定要继续吗？</string>
    <string name="add_friend_ask_push_success">发送请求成功，等待对方验证</string>
    <string name="add_friend_ask_push_fail">发送请求失败!</string>
    <string name="add_friend_asking">正在添加...</string>
    <string name="modify_self_data_success">修改成功</string>
    <string name="modify_self_data_fail">修改失败</string>
    <string name="please_select_sex">请选择性别</string>
    <string name="register_fail">注册失败</string>
    <string name="baidumap_key_error">哎呀,百度地图key验证出错</string>
    <string name="no_nick_name_notice">(点击设置昵称)</string>
    <string name="no_city_name_notice">(点击设置城市)</string>
    <string name="others_no_nick_name_notice">用户未设置昵称</string>
    <string name="others_no_city_name_notice">用户未设置城市</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="delete_one_friend">删除联系人</string>
    <string name="delete_recent_chat">删除会话</string>
    <string name="delete_one_friend_success">删除成功</string>
    <string name="delete_one_friend_fail">删除失败</string>
    <string name="recent_chat_pic">[图片]</string>
    <string name="recent_chat_audio">[语音]</string>
    <string name="add_new_friend_success">添加成功</string>
    <string name="add_new_friend_fail">添加失败</string>
    <string name="ask_delete_friend">删除好友请求</string>
    <string name="is_looking_near_peo">正在查询附近的人...</string>
    <string name="search_near_peo_finish">附近的人搜索完成</string>
    <string name="no_near_peo">暂无附近的人!</string>
    <string name="add_peo_request_send_success">发送请求成功，等待对方验证</string>
    <string name="add_peo_request_send_fail">发送请求成功，等待对方验证</string>
    <string name="search_friend">查找好友</string>
    <string name="user_is_not_exist">用户不存在</string>
    <string name="user_search_finish">用户搜索完成</string>
    <string name="please_enter_user_name">请输入用户名</string>
    <string name="pic_browser">图片浏览</string>
    <string name="send">发送</string>
    <string name="baidu_map">地图</string>
    <string name="get_location_fail">获取地理位置信息失败!</string>

    <!-- 加入聊天 -->
    <string name="action_settings">Settings</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">会话</string>
    <string name="main_tab_contact">联系人</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出账号</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选择</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="blacklist">黑名单</string>
    <string name="chat">发起会话</string>
    <string name="add_friend">添加好友</string>
    <string name="send_state">已读</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="black_tips">已添加至黑名单，你将不再收到对方的消息!</string>
    <string name="username">用户名</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="voice_seconds_tips">还可以说%1$s秒</string>
    <string name="voice_short_tips">录音时间太短</string>
    <string name="other_place_login_notice">您的账号已在其他设备上登录</string>
    <string name="move_from_black_list_success">移出黑名单成功</string>
    <string name="move_from_black_list_fail">移出黑名单失败</string>
    <string name="please_enter_nick_name">请填写昵称!</string>

    <!-- citylist-->
    <string name="locating">定位中</string>
    <string name="notfound">抱歉，未找到！</string>
    <string name="key_word">请输入关键字</string>
    <string name="locatez_as">定位为</string>
    <string name="switch_ornot">，是否切换？</string>
    <string name="city_show_text_hot">热门城市</string>
    <string name="city_hotcity_curlocationcity_text">定位城市</string>
    <string name="third_title_close">关闭</string>
    <string name="city_hotcity_searchedittext_hint">请输入城市名,首字母或拼音</string>
    <string name="xml_loading_01">加载中</string>
    <string name="quit_dialog_cancel">取 消</string>
    <string name="assistant_upload_dialog_title">提示</string>
    <string name="update_address_success">更改地址成功</string>
    <string name="update_address_fail">更改地址失败</string>
    <string name="choose_city">选择城市</string>

</resources>