<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_bg"
        android:orientation="horizontal">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/add_nick"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_nick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/add_name_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/sure_change_nick_name_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:background="?attr/do_login_and_register_btn_bg"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>