<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Setting.TextView"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_myinfo" />

        <TextView
            style="@style/Setting.TextView"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/forward_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:background="@color/divider2"></View>

    <RelativeLayout
        android:id="@+id/layout_blacklist"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_selector"
        android:minHeight="50dp"
        android:padding="10dp">

        <TextView
            style="@style/Setting.TextView"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/set_blacklist" />

        <TextView
            style="@style/Setting.TextView"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@mipmap/forward_arrow" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:background="@color/divider2"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            style="@style/Setting.TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/set_notify" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:background="@color/divider2"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            style="@style/Setting.TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/set_voice" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:background="@color/divider2"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            style="@style/Setting.TextView"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/set_vibrate" />

        <com.kyleduo.switchbutton.SwitchButton
            android:id="@+id/sb_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_line_width_1"
        android:background="@color/divider2"></View>

    <Button
        android:id="@+id/btn_logout"
        style="@style/Setting.ButtonLogout"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:text="@string/logout" />
</LinearLayout>