<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/my_xiongdilian_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1.0"
                android:background="@drawable/my_xiongdilian_ll_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/me"
                    android:src="@mipmap/xiongdilian" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/my_xiongdilian"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pic_story_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="0.618"
                android:background="@drawable/friend_ll_bg"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/me"
                    android:src="@mipmap/pic_story" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/pic_story"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/friend_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.618"
            android:background="@drawable/friend_ll_bg">

            <TextView
                android:id="@+id/friend_ll_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:ems="1"
                android:gravity="center"
                android:text="@string/friend"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/friend_ll_iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_above="@id/friend_ll_tv"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/add"
                android:src="@mipmap/friend" />

            <TextView
                android:id="@+id/tips_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@mipmap/unread_count_bg"
                android:gravity="center"
                android:text="New Message!"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting_center_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.618"
        android:background="@drawable/my_xiongdilian_ll_bg"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/me"
            android:src="@mipmap/people_center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/person_setting"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>